# chaos

./: .gitignore  1  README.md
classical_chaos/: Cargo.toml  README.md  deviation_vector.csv  deviation_vector.gp  deviation_vector_k0.01.csv  deviation_vector_k0.1.csv  deviation_vector_k1.csv  plot_all  standard_map.gp  var.csv  var.gp
classical_chaos/julia/: Manifest.toml  Project.toml  standard_map.jl
classical_chaos/src/: main.rs  module.rs  standmapHom.py
quantum_chaos/: Cargo.toml  plot.ipynb  plot_all  run_all
quantum_chaos/generated_data/: well_energies.txt  well_energy_differences.txt
quantum_chaos/gnuplot/: endif.gnuplot  energies.gnuplot
quantum_chaos/plots/: ps.gnuplot  well_energies.gnuplot  well_energy_differences.gnuplot
quantum_chaos/src/: main.rs  module.rs  plotters.py  trash.rs
