[package]
name = "standard_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = { version = "0.8.3", features = ["wasm"] }
itertools-num = "0.1.3"
csv = "1.2.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"